[hao] update admin
